// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `"A (c = 0)"`;

exports[`snapshot: 1 1`] = `"A (c = 0)"`;

exports[`snapshot: 2 1`] = `
"C (c = 20)
..A (c = 0)
..B (c = 10)
....A (c = 0)"
`;

exports[`snapshot: 3 1`] = `"A (c = 0)"`;

exports[`snapshot: 4 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....A (c = 0)
....B (c = 10)
......A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)"
`;

exports[`snapshot: 5 1`] = `
"C (c = 20)
..A (c = 0)
..B (c = 10)
....A (c = 0)"
`;

exports[`snapshot: 6 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....A (c = 0)
....B (c = 10)
......A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)"
`;

exports[`snapshot: 7 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....A (c = 0)
....B (c = 10)
......A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)"
`;

exports[`snapshot: 8 1`] = `
"I (c = 80)
..A (c = 0)
..E (c = 40)
....A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
..G (c = 60)
....A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....E (c = 40)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
....F (c = 50)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
......E (c = 40)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..........C (c = 20)
............A (c = 0)
............B (c = 10)
..............A (c = 0)
..H (c = 70)
....A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....F (c = 50)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
......E (c = 40)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)"
`;

exports[`snapshot: 9 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....A (c = 0)
....B (c = 10)
......A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)"
`;

exports[`snapshot: 10 1`] = `
"K (c = 100)
..A (c = 0)
..F (c = 50)
....A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....E (c = 40)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..H (c = 70)
....A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....F (c = 50)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
......E (c = 40)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..........C (c = 20)
............A (c = 0)
............B (c = 10)
..............A (c = 0)
....G (c = 60)
......A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
......E (c = 40)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..........C (c = 20)
............A (c = 0)
............B (c = 10)
..............A (c = 0)
......F (c = 50)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)"
`;
